# AI_Project

./: .gitignore  README.md  env.py  pyproject.toml
00_basic/: 1_func_test.py  2_pydantic_test.py  3_closure.py  4_decorator_test.py  5_sync_demo1.py  5_sync_request.py  6_async_demo1.py  6_async_request.py
00_basic/fastapi/: README.md  main.py  server.py
ai/: __init__.py  claude_demo.py  doubao.py  get_weather.py  openclaw_sandbox.py
