[project]
name = "ai-project"
version = "0.1.0"
description = "AI demos using multiple providers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
    "opensandbox",
    "python-dotenv>=1.2.2",
    "requests",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "ai_langchain"]
